# pysenec

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pytest.yml
pysenec/: __init__.py  cli.py  constants.py  util.py
tests/: conftest.py  test_senec.py
tests/cassettes/: test_update.yaml
