[tool.poetry]
name = "pysenec"
version = "0.1.0"
description = "Unofficial, local SENEC Battery Client"
authors = ["Mikołaj Chwalisz <m.chwalisz@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[tool.poetry.scripts]
senec = "pysenec.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
