[tool.poetry]
name = "pysenec"
version = "0.2.0"
description = "Unofficial, local SENEC Battery Client"
authors = ["Mikołaj Chwalisz <m.chwalisz@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-vcr = "^1.0.2"

[tool.poetry.scripts]
senec = "pysenec.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
